fpp_analysis/src/test/redef/constant.ref.txt
error: duplicate symbol definition
 --> [ local path prefix ]/redef/constant.fpp:2:10
  |
2 | constant x = 1
  |          ^ redefinition of symbol x
  |
 ::: [ local path prefix ]/redef/constant.fpp:1:1
  |
1 | constant x = 0
  | -------------- previous definition is here

